discord/style.css
@font-face {
    font-family: "gg-sans";
    font-weight: normal;
    src: url("gg-sans.woff2");
}

@font-face {
    font-family: "gg-sans";
    font-weight: bold;
    src: url("gg-sans-bold.woff2");
}

:root {
    --button-color: #fa5252;
    --button-background: rgba(0, 0, 0, 0.4);
    --button-border: 1px solid rgba(255, 255, 255, 0.3);
    --button-outline: 2px solid rgba(255, 255, 255, 0.6);

    --code-color: #fff;
    --code-bg-color: rgba(0, 0, 0, 0.3);
    --code-border: 1px solid rgba(255, 255, 255, 0.2);
}

body {
    background-color: #0d0c0f;
    color: #dcddde;
    font-family: "gg-sans", 'Whitney', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    padding-right: 10px;
    min-width: 500px;
    animation: fade-in 0.2s ease-in-out;
}

@keyframes fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

button {
    background: var(--button-background);
    font-family: "gg-sans", 'Whitney', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 600;
    border-radius: 5px;
    font-size: 15px;
    color: var(--button-color);
    border: var(--button-border);
    cursor: pointer;
    transition: transform 0.1s, color 0.08s, outline 0.05s;
}

button:active {
    transform: scale(0.95);
}

button:hover,
button:focus {
    color: var(--text-color) !important;
    outline: var(--button-outline);
}

code {
    font-family: Cascadia Code, FMono-Regular, Consolas, DejaVu Sans Mono, Liberation Mono, Menlo, monospace !important;
}

code {
    color: var(--code-color);
    font-size: 14px;
    padding: 1px 4px;
    background-color: var(--code-bg-color);
    border: var(--code-border);
    border-radius: 5px;
    -webkit-user-select: all;
    user-select: all;
}

.message {
    display: flex;
    padding: 5px;
}

/* Discord Theme Colors */
.theme-light {
    background-color: #fcfcfc;
    color: #2e3338;
}
.theme-dark {
    background-color: #333239;
    color: #dcddde;
}
.theme-darker {
    background-color: #212025;
    color: #dcddde;
}
.theme-darkest {
    background-color: #0d0c0f;
    color: #dcddde;
}

.avatar {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 16px;
}

.message-content {
    flex: 1;
}

.user-area {
    line-height: 1;
}

.username {
    font-weight: 500;
    margin-right: 4px;
    color: #bb0939; /* Role color (blue in this case) */
}

.apptag {
    font-weight: 600;
    margin-right: 4px;
    color: #ffffff;
    font-size: 0.75em;
    padding: 0px 5px;
    background-color: #5865f2;
    border-radius: 5px;
}

.discord-timestamp {
    padding: 0px 2px;
    background-color: #28292c;
    border-radius: 4px;
}

.modal-button {
    width: fit-content;
    color: #ffffff;
    font-size: 0.875em;
    margin: 5px 0 0 0;
    padding: 7.5px 15px;
    background-color: #00863a;
    border-radius: 8px;
}

.timestamp {
    color: #72767d;
    font-size: 0.75em;
    font-weight: 400;
}

.image {
    max-height: 350px;
    width: auto;
    max-width: 550px;
    border-radius: 5px;
    margin-bottom: 2px;
}

.image-only {
    margin-top: 5px;
}

.message-text {
    line-height: 1.6;
}

.embed-container {
    background-color: #131416;
    outline: 1px solid #ffffff25;
    border-radius: 4px;
    border-left: 4px solid #bb0939;
    padding: 12px 16px 16px 12px;
    margin-top: 8px;
    max-width: 520px;
}

.embed-author {
    display: flex;
    align-items: center;
    font-size: 0.875em;
    margin-bottom: 8px;
    font-weight: 600;
}

.embed-author-icon {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    margin-right: 7px;
}

.embed-title {
    font-weight: 600;
    font-size: 1em;
    margin-bottom: 8px;
    color: #ffffff;
}

.embed-description {
    font-size: 0.875em;
    margin-bottom: 8px;
}

.embed-image img {
    width: 100%;
    object-fit: cover;
    border-radius: 5px;
    margin-bottom: 2px;
}

.embed-fields {
    display: flex;
    flex-direction: column;
    gap: 8px;
    margin-bottom: 8px;
}

.embed-field {
    font-size: 0.875em;
}

.embed-field.inline {
    display: inline-block;
    width: calc(50% - 4px);
    vertical-align: top;
}

.embed-field-name {
    font-weight: 600;
    color: #ffffff;
}

.embed-footer {
    display: flex;
    align-items: center;
    font-size: 0.75em;
}

.embed-footer-icon {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    margin-right: 8px;
}

.embed-timestamp {
    margin-left: auto;
}

a:link {
    color: #337edb;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

